The fullscreen alert should no longer show on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@ html {
   animation: spin 2s linear infinite;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .loader {
     border: 5px solid white;
     border-radius: 50%;
